--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body{
   margin: 0px;
   padding: 0px;
   font-family: RobotoPc;
+  text-decoration: none;
 }
 
 /* CONTENEDOR */
@@ -44,7 +45,7 @@ header nav {
 
 
 /* CONTENIDO: IMAGEN E INFORMACIÓN */
-#tit{
+#arg{
   background-color: aquamarine;
   width: 1100px;
   height: 500px;
@@ -52,37 +53,88 @@ header nav {
   left: 50%;
   margin-left: -550px;
   top: 150px;
+  overflow: hidden;
 }
 
-#tit>img{
+#arg>img{
   position: absolute;
   width: 1100px;
   height: 500px;
 }
 
-#tit>div{
+#tit{
   position: absolute;
   width: 430px;
   border-bottom: 500px solid rgb(0, 0, 0);
   border-right: 130px solid transparent;
+  z-index: 2;
 }
 
-#tit>div>p{
+#tit>p{
   color: rgb(255, 255, 255);
   position: absolute;
   left: 30px;
+  margin-top: 100px;
 }
 
-#tit>div>p:first-child{
+#tit>p:first-child{
   font-weight: bolder;
   font-family: sans-serif;
+  font-size: 25px;
   top: 10px;
 }
 
-#tit>div>p:nth-child(2){
-  top: 50px;
+#tit>p:nth-child(2){
+  top: 70px;
 }
 
-#tit>div>p:nth-child(3){
-  top: 110px;
+
+#tit+div{
+  background-color: rgba(176, 176, 176, 0.9);
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  z-index: 1;
+  left: 300px;
+  top: 500px;
+  transition: 0.5s;
+}
+
+#arg:hover>#tit+div{
+  top: 0px;
+  transition: 0.5s;
+}
+
+#tit+div>p{
+  position: relative;
+  margin-left: 20px;
+}
+
+#arg+div{
+  width: 1200px;
+  height: 100px;
+  position: relative;
+  top: 700px;
+}
+
+.bot{
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  left: 920px;
+  background-color: black;
+  width: 230px;
+  padding: 20px 15px;
+  color: white;
+  font-weight: bolder;
+  text-align: center;
+  border-radius: 8px;
+  transition: 0.5s;
+  box-shadow: inset 0px 0 0 0 rgb(16, 84, 241);
+}
+
+.bot:hover{
+  box-shadow: inset 230px 0 0 0 rgb(16, 84, 241);
+  transition-timing-function: linear;
+  transition: 0.5s;
 }
