--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,19 @@ body{
   text-decoration: none;
 }
 
+h2{
+  font-weight: bolder;
+  display: block;
+  margin-left: 50px;
+  text-transform: uppercase;
+}
+
+
 /* CONTENEDOR */
 #contenedor {
   background-color: white;
   width: 1200px;
-  min-height: 900px;
-  max-height: fit-content;
+  min-height: 1400px;
   position: relative;
   margin: 0 auto;
 }
@@ -44,19 +51,121 @@ header nav {
 }
 
 
-/* CONTENIDO: IMAGEN E INFORMACIÓN */
+/* FORMULARIO */
+#form{
+  position: relative;
+  top: 100px;
+  width: 1200px;
+  height: 600px;
+}
+
+form>div{
+  width: 500px;
+  height: 300px;
+  position: absolute;
+  margin-top: 40px;
+  margin-left: 50px;
+}
+
+#form2{
+  left: 600px;
+}
+
+form>div>*{
+  display: table-row;
+  margin-left: 20px;
+}
+
+form label{
+  font-weight: bolder;
+  display: block;
+  margin-bottom: 10px;
+  
+}
+
+form p{
+  font-weight: bolder;
+  display: block;
+  margin-bottom: 10px;
+}
+
+form input{
+  width: 400px;
+  height: 30px;
+  margin-bottom: 20px;
+  border-color: blue;
+  padding-left: 5px;
+}
+
+form input[type="radio"]{
+  width: 50px;
+  float: left;
+  margin-left: 0px;
+  margin-top: -2px;
+}
+
+input#otro{
+  margin-right: 100px;
+}
+
+label.sexo{
+  float: left;
+  margin-top: 5px;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+label.especificar{
+  font-weight: normal;
+  float: left;
+  margin-top: 4px;
+}
+
+input.especificar{
+  width: 200px;
+  float: left;
+}
+
+input#otro~.especificar{
+  visibility: hidden;
+} 
+
+input#otro:checked~.especificar{
+  visibility: visible;
+}
+
+form textarea{
+  border-color: blue;
+  padding-left: 2px;
+}
+
+input.bot{
+  top: 470px;
+  height: 60px;
+  left: 850px;
+}
+
+
+
+/* CONTENIDO: ARGUMENTO */
 #arg{
-  background-color: aquamarine;
+  width: 1200px;
+  height: 600px;
+  position: relative;
+  margin-top: 100px;
+}
+
+#arg>div{
   width: 1100px;
   height: 500px;
   position: absolute;
   left: 50%;
   margin-left: -550px;
-  top: 150px;
+  margin-top: 20px;
   overflow: hidden;
 }
 
-#arg>img{
+#arg>div>img{
   position: absolute;
   width: 1100px;
   height: 500px;
@@ -74,7 +183,7 @@ header nav {
   color: rgb(255, 255, 255);
   position: absolute;
   left: 30px;
-  margin-top: 100px;
+  margin-top: 150px;
 }
 
 #tit>p:first-child{
@@ -86,6 +195,14 @@ header nav {
 
 #tit>p:nth-child(2){
   top: 70px;
+  font-size: 17px;
+}
+
+#tit>img{
+  width: 200px;
+  position: absolute;
+  top: 340px;
+  left: 80px;
 }
 
 
@@ -100,7 +217,7 @@ header nav {
   transition: 0.5s;
 }
 
-#arg:hover>#tit+div{
+#arg>div:hover>#tit+div{
   top: 0px;
   transition: 0.5s;
 }
@@ -110,11 +227,13 @@ header nav {
   margin-left: 20px;
 }
 
+
+/* BOTÓN */
 #arg+div{
   width: 1200px;
-  height: 100px;
+  height: 60px;
   position: relative;
-  top: 700px;
+  top: 0px;
 }
 
 .bot{
@@ -128,6 +247,7 @@ header nav {
   color: white;
   font-weight: bolder;
   text-align: center;
+  text-transform: uppercase;
   border-radius: 8px;
   transition: 0.5s;
   box-shadow: inset 0px 0 0 0 rgb(16, 84, 241);
