Texto de argumento añadido y animaciones de  cabecera.

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,9 @@ h2{
   font-weight: bolder;
   display: block;
   margin-left: 50px;
+  margin-bottom: 20px;
   text-transform: uppercase;
+  color: rgb(0, 0, 63);
 }
 
 
@@ -50,7 +52,15 @@ header nav {
   background-color: black;
 }
 
+nav div{
+  transition: 0.3s;
+  cursor: default;
+}
 
+nav>div:hover{
+  transform: scale(1.3);
+  transition: 0.3s;
+}
 /* FORMULARIO */
 #form{
   position: relative;
@@ -143,6 +153,7 @@ input.bot{
   top: 470px;
   height: 60px;
   left: 850px;
+  cursor: pointer;
 }
 
 
@@ -215,6 +226,15 @@ input.bot{
   left: 300px;
   top: 500px;
   transition: 0.5s;
+}
+
+#tit+div>p{
+  position: relative;
+  top: 50px;
+  margin-top: 30px;
+  padding-left: 90px;
+  font-size: 20px;
+  
 }
 
 #arg>div:hover>#tit+div{
