--- a/css/styles.css
+++ b/css/styles.css
@@ -47,9 +47,9 @@ header nav {
   justify-content: space-around;
   align-items: center;
   color: white;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: black;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  background-color: rgb(0, 0, 58);
 }
 
 nav div{
@@ -61,6 +61,8 @@ nav>div:hover{
   transform: scale(1.3);
   transition: 0.3s;
 }
+
+
 /* FORMULARIO */
 #form{
   position: relative;
@@ -105,6 +107,10 @@ form input{
   margin-bottom: 20px;
   border-color: blue;
   padding-left: 5px;
+}
+
+form input:focus, textarea:focus{
+  background-color: rgb(202, 232, 235);
 }
 
 form input[type="radio"]{
