--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,10 @@ h2{
 #contenedor {
   background-color: white;
   width: 1200px;
-  height: 1700px;
-  position: relative;
-  margin: 0 auto;
+  height: 1810px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 
@@ -57,7 +58,7 @@ nav div{
   cursor: default;
 }
 
-nav>div:hover{
+nav div:hover{
   transform: scale(1.3);
   transition: 0.3s;
 }
@@ -101,7 +102,7 @@ form>div{
   left: 600px;
 }
 
-form>div>*{
+form>div *{
   display: table-row;
   margin-left: 20px;
 }
@@ -123,8 +124,10 @@ form input{
   width: 400px;
   height: 30px;
   margin-bottom: 20px;
-  border-color: blue;
   padding-left: 5px;
+  border-color: blue;
+  border-width: 0px 0px 2px 0px;
+  background: none;
 }
 
 form input:focus, textarea:focus{
@@ -138,34 +141,12 @@ form input[type="radio"]{
   margin-top: -2px;
 }
 
-input#otro{
-  margin-right: 100px;
-}
 
 label.sexo{
   float: left;
   margin-top: 5px;
   font-size: 13px;
   font-weight: normal;
-}
-
-label.especificar{
-  font-weight: normal;
-  float: left;
-  margin-top: 4px;
-}
-
-input.especificar{
-  width: 200px;
-  float: left;
-}
-
-input#otro~.especificar{
-  visibility: hidden;
-} 
-
-input#otro:checked~.especificar{
-  visibility: visible;
 }
 
 form textarea{
@@ -259,17 +240,12 @@ input.bot{
   margin-top: 30px;
   padding-left: 90px;
   font-size: 20px;
-  
+  margin-left: 20px;
 }
 
 #arg>div:hover>#tit+div{
   top: 0px;
   transition: 0.5s;
-}
-
-#tit+div>p{
-  position: relative;
-  margin-left: 20px;
 }
 
 
@@ -303,4 +279,27 @@ input.bot{
   box-shadow: inset 230px 0 0 0 rgb(16, 84, 241);
   transition-timing-function: linear;
   transition: 0.5s;
+}
+
+
+/* FOOTER */
+footer>div{
+  width: 1200px;
+  height: 70px;
+  background: black;
+  position: relative;
+  margin-top: 150px;
+  color: white;
+}
+
+footer img{
+  width: 30px;
+  float: right;
+  margin-top: 20px;
+  margin-right: 15px;
+  transition: 0.2s;
+}
+
+div.contactar{
+  display: none;
 }
