--- a/css/responsive.css
+++ b/css/responsive.css
@@ -220,3 +220,236 @@
       margin-top: 2px;
     }
   }
+
+
+  /* TABLETS */
+  @media only screen and (min-width: 600px) and (max-width: 899px){
+  
+    /* CONTENEDOR */
+    #contenedor {
+      width: 100%;
+      height: 2140px;
+    }
+  
+  
+    /* HEADER */
+    header {
+      width: 100%;
+    }
+  
+    header nav {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+  
+    nav div{
+      display: none;
+      transition: 0.3s;
+      cursor: default;
+    }
+  
+    nav>div:first-child{
+      display: block;
+      margin-left: 0px;
+    }
+  
+    nav>div:hover{
+      transform: scale(1.0);
+    }
+  
+    #titulo{
+      width: 100%;
+    }
+  
+  
+    /* FORMULARIO */
+    #form{
+      position: relative;
+      margin: 0 auto;
+      top: 100px;
+      width: 93%;
+      text-align: center;
+    }
+  
+    #form>h2{
+      margin-left: 0px;
+    }
+  
+    #form>h3{
+      width: 100%;
+      text-align: center;
+      margin-left: 0px;
+      font-size: 15px;
+      margin-bottom: 20px;
+    }
+  
+    form>div{
+      width: 90%;
+      height: 270px;
+      margin-top: 40px;
+      left: 50%;
+      margin-left: -45%;
+    }
+  
+      
+    #form2{
+      width: 90%;
+      left: 50%;
+      height: 240px;
+      margin-left: -45%;
+      top: 470px;
+    }
+    
+    #form2 textarea{
+      width: 300px;
+    }
+  
+    form>div *{
+      margin-left: 0px;
+    }
+    
+    form input{
+      width: 400px;
+      margin-bottom: 50px;
+    }
+
+    label.sexo{
+      margin-right: 20px;
+      margin-left: 50px;
+    }
+
+    div.sexo{
+      width: 450px;
+      display: block;
+      height: 50px;
+      margin-left: 50%;
+      transform: translate(-50%, 0);
+    }
+
+    div.sexo>input{
+      width: 30px;
+      margin-left: -17px;
+      margin-right: 10px;
+    }
+  
+    input.bot{
+      width: 190px;
+      top: 830px;
+      left: 50%;
+      margin-left: -90px;
+    }
+  
+  
+    /* CONTENIDO: ARGUMENTO */
+    #arg{
+      width: 90%;
+      height: 600px;
+      position: relative;
+      margin: 500px auto 0;
+    }
+  
+    #arg>h2{
+      margin-left: 0px;
+      text-align: center;
+    }
+  
+    #arg>div{
+      width: 89%;
+      height: 510px;
+      margin-left: 0;
+      left: 5%;
+    }
+  
+    #arg>div>img{
+      width: 100%;
+      height: 100%;
+    }
+  
+    #tit{
+      width: 100%;
+      height: 160px;
+      border-bottom: 0;
+      border-right: 0;
+      background-color: black;
+      text-align: center;
+    }
+    
+    #tit>p{
+      left: 20px;
+      margin-top: 0px;
+    }
+  
+    #tit>p:first-child{
+      margin-top: 20px;
+      left: 50%;
+      transform: translate(-50%,0);
+    }
+    
+    #tit>p:nth-child(2){
+      top: 90px;
+      padding-right: 15px;
+    }
+  
+    #tit>img{
+      display: none;
+    }
+  
+    #tit+div{
+      width: 100%;
+      height: 100%;
+      left: 0px;
+      top: 100px;
+    }
+
+    #tit+div>p:first-child{
+      margin-top: 50px;
+    }
+  
+    #tit+div>p{
+      margin-top: 20px;
+      padding-left: 10px;
+      padding-right: 10px;
+      font-size: 17px;
+    }
+  
+    #arg>div:hover>#tit+div{
+      top: 100px;
+    }
+  
+  
+    /* BOTÓN */
+    #arg+div{
+      width: 100%;
+      top: 50px;
+    }
+  
+    .bot{
+      left: 50%;
+      margin-left: -90px;
+      width: 190px;
+    }
+  
+    
+    /* FOOTER */
+    footer>div{
+      width: 100%;
+      height: 100px;
+      margin-bottom: 0px;
+    }
+
+    footer>div>img{
+      position: relative;
+      top: -90px;
+    }
+
+    div.contactar{
+      display: block;
+      margin-top: 14px;
+    }
+
+    div.contactar>img{
+      width: 10px;
+      float: left;
+      margin-top: 2px;
+    }
+  }
