--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,7 @@
 
 /* MÓVIL */
 @media only screen and (min-width: 350px) and (max-width: 599px){
-  
+
     /* CONTENEDOR */
     #contenedor {
       width: 100%;
@@ -451,5 +451,203 @@
       width: 10px;
       float: left;
       margin-top: 2px;
+    }
+  }
+
+
+  
+  @media only screen and (min-width: 900px) and (max-width: 1199px){
+  
+    /* CONTENEDOR */
+    #contenedor {
+      width: 100%;
+      height: 2040px;
+    }
+  
+  
+    /* HEADER */
+    header {
+      width: 100%;
+    }
+  
+    header nav {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+  
+    #titulo{
+      width: 100%;
+    }
+  
+  
+    /* FORMULARIO */
+    #form{
+      position: relative;
+      margin: 0 auto;
+      top: 100px;
+      width: 93%;
+      
+    }
+  
+    #form>h2{
+      margin-left: 0px;
+    }
+  
+    #form>h3{
+      width: 100%;
+      margin-left: 0px;
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
+  
+    form>div{
+      width: 40%;
+      height: 280px;
+      margin-top: 40px;
+      text-align: center;
+    }
+  
+      
+    #form2{
+      width: 40%;
+      left: 50%;
+      height: 240px;
+    }
+    
+    #form2 textarea{
+      width: 300px;
+    }
+  
+    form>div *{
+      margin-left: 0px;
+    }
+    
+    form input{
+      width: 300px;
+      margin-bottom: 50px;
+    }
+
+    label.sexo{
+      margin-right: 20px;
+      margin-left: 10px;
+    }
+
+    div.sexo{
+      width: 300px;
+      display: block;
+      height: 50px;
+      margin-left: 50%;
+      transform: translate(-50%, 0);
+    }
+
+    div.sexo>input{
+      width: 30px;
+      margin-left: -17px;
+      margin-right: 10px;
+    }
+  
+    input.bot{
+      width: 190px;
+      top: 530px;
+      left: 80%;
+      margin-left: -90px;
+    }
+  
+  
+    /* CONTENIDO: ARGUMENTO */
+    #arg{
+      width: 90%;
+      height: 600px;
+      position: relative;
+      margin: 300px auto 0;
+    }
+
+    #arg>div{
+      width: 89%;
+      height: 510px;
+      margin-left: 0;
+      left: 5%;
+    }
+  
+    #arg>div>img{
+      width: 100%;
+      height: 100%;
+    }
+  
+    #tit{
+      width: 100%;
+      height: 160px;
+      border-bottom: 0;
+      border-right: 0;
+      background-color: black;
+      text-align: center;
+    }
+    
+    #tit>p{
+      left: 20px;
+      margin-top: 0px;
+    }
+  
+    #tit>p:first-child{
+      margin-top: 20px;
+      left: 50%;
+      transform: translate(-50%,0);
+    }
+    
+    #tit>p:nth-child(2){
+      top: 90px;
+      padding-right: 15px;
+      font-size: 20px;
+    }
+  
+    #tit>img{
+      display: none;
+    }
+  
+    #tit+div{
+      width: 100%;
+      height: 100%;
+      left: 0px;
+      top: 100px;
+    }
+
+    #tit+div>p:first-child{
+      margin-top: 50px;
+    }
+  
+    #tit+div>p{
+      margin-top: 20px;
+      padding-left: 10px;
+      padding-right: 10px;
+      font-size: 19px;
+    }
+  
+    #arg>div:hover>#tit+div{
+      top: 100px;
+    }
+  
+  
+    /* BOTÓN */
+    #arg+div{
+      width: 100%;
+      top: 50px;
+    }
+  
+    .bot{
+      left: 80%;
+      margin-left: -90px;
+      width: 190px;
+    }
+  
+    
+    /* FOOTER */
+    footer>div{
+      width: 100%;
+      height: 100px;
+      margin-bottom: 0px;
+    }
+
+    div.contactar{
+      display: none;
     }
   }
