--- a/css/responsive.css
+++ b/css/responsive.css
@@ -164,6 +164,13 @@
     display: none;
   }
 
+  #tit+div{
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 100px;
+  }
+
   #tit+div>p{
     margin-top: 20px;
     padding-left: 10px;
@@ -276,7 +283,7 @@
     }
     
     #form2 textarea{
-      width: 300px;
+      width: 270px;
     }
     
     form input{
@@ -339,6 +346,11 @@
     /* FOOTER */
     div.contactar{
       display: none;
+    }
+
+    footer>div img{
+      position: relative;
+      top: 0px;
     }
   }
 }
