--- a/css/responsive.css
+++ b/css/responsive.css
@@ -268,6 +268,14 @@
     #contenedor {
       height: 2040px;
     }
+
+    nav div{
+      display: block;
+    }
+
+    nav>div:hover{
+      transform: scale(1.3);
+    }
   
     /* FORMULARIO */
     #form>h3{
