--- a/css/responsive.css
+++ b/css/responsive.css
@@ -199,11 +199,11 @@
   /* FOOTER */
   footer>div{
     width: 100%;
-    height: 100px;
+    height: 120px;
     margin-bottom: 0px;
   }
 
-  footer>div img{
+  div.rs{
     position: relative;
     top: -90px;
   }
@@ -266,7 +266,7 @@
   @media only screen and (min-width: 900px) and (max-width: 1199px){
     /* CONTENEDOR */
     #contenedor {
-      height: 2040px;
+      height: 2000px;
     }
 
     nav div{
@@ -361,9 +361,13 @@
       display: none;
     }
 
-    footer>div img{
+    div.rs{
       position: relative;
       top: 0px;
+    }
+
+    footer>div{
+      height: 80px;
     }
   }
 }
