--- a/css/styles.css
+++ b/css/styles.css
@@ -290,16 +290,38 @@ footer>div{
   position: relative;
   margin-top: 150px;
   color: white;
+  overflow: hidden;
 }
 
-footer img{
-  width: 30px;
+div.rs{
+  width: 40px;
+  height: 40px;
+  background-color: aliceblue;
+  border-radius: 50%;
   float: right;
   margin-top: 20px;
   margin-right: 15px;
   transition: 0.2s;
 }
 
+div.rs img{
+  width: 30px;
+  position: relative;
+  margin-left: 50%;
+  margin-top: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.2s;
+}
+
+div.rs:hover{
+  background-color: darkturquoise;
+}
+
+div.rs:hover>img{
+  transition: 0.2s;
+}
+
 div.contactar{
   display: none;
+  transition: 0.2s;
 }
